Fix padding for Practice section on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -160,6 +160,10 @@ nav li {
 }
 
 @media only screen and (max-width: 491px) {
+    #practice {
+        padding: 0;
+    }
+    
     #practiceleft {
         display: none;
     }
@@ -175,6 +179,8 @@ nav li {
 
     .callout img {
         width: 100%;
+        float: none;
+        clear: none;
     }
 
     .top img {
